<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_camera_stream</name>
  <version>1.0.1</version>
  <description>
    Publish a camera view as rendered by rviz on an Image topic
  </description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <author email="tbd@tbd.com">Mikhail Medvedev</author>

  <license>BSD</license>

  <url type="website">https://github.com/lucasw/rviz_camera_stream</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>roslint</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

<!--  <export>-->
<!--      <rviz plugin="${prefix}/plugin_description.xml"/>-->
<!--  </export>-->
</package>
